<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_below="@+id/tb"
	android:layout_marginTop="?attr/actionBarSize"
	android:fillViewport="false"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".activities.LoginActivity"

	tools:showIn="@layout/activity_login">


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp"
		android:weightSum="1">

		<ImageView
			android:id="@+id/image"
			android:layout_width="250dp"
			android:layout_height="250dp"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/splash"
			tools:ignore="ContentDescription"/>


		<TextView
			android:id="@+id/lblLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:paddingBottom="10dp"
			android:text="Login"
			android:textSize="20sp"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/layout_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"

				android:hint="Email ID"
				android:inputType="textEmailAddress"

				android:maxLines="1"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/layout_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"

				android:hint="Password"
				android:inputType="textPassword"
				android:maxLines="1"
				/>
		</android.support.design.widget.TextInputLayout>

		<!-- Login Button -->

		<Button
			android:id="@+id/btnlogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dip"
			android:background="@color/gblue"
			android:padding="10dp"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:text="Login"
			android:textColor="@color/white"/>


		<TextView

			android:id="@+id/passres"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"


			android:layout_marginTop="15dp"
			android:gravity="center"

			android:textColor="@color/black"/>

		<Button
			android:id="@+id/btnguest"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:background="@color/gblue"
			android:text="Guest Login"

			android:textColor="@color/white"/>

		<Button
			android:id="@+id/btnregister"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
			android:background="@color/grey"
			android:padding="10dp"
			android:text="Register"
			android:textColor="@color/white"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/contact_sir"
			android:textSize="16sp"/>


		<TextView
			android:id="@+id/lblprivacy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="16sp"/>


	</LinearLayout>

</ScrollView>


