<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingTop="@dimen/activity_vertical_margin"

	tools:context=".fragments.NoticesFragment">

	<TextView
		android:id="@+id/status"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingTop="5pt">

	</TextView>

	<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/swipe_refresh_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/status"

		>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/recyler_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentStart="true"
			android:padding="5dp"
			>
		</android.support.v7.widget.RecyclerView>
	</android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
