<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/settings"
		android:title="Settings"/>
	<item
		android:id="@+id/privacy"
		android:title="Privacy Policy"/>
	<item
		android:id="@+id/logout"
		android:title="Logout"/>
</menu>