...
	<string name="action_settings">Settings</string>
	<string name="title_activity_index">KC College</string>
	<string name="title_activity_feed">Notices</string>
	<string name="about">KC Student App created by\n\nJC CS Department:-\nNiraj Patel (teacher)\nSahil Nirkhe (student)\nParas Shah (student)</string>


	<string name="tag_title">title</string>
	<string name="tag_summary">summary</string>
	<string name="item">item</string>


	<string name="lastupdate">Last updated on:</string>
	<string name="date_format">MMM dd h:mmaa</string>
...
